# Parallel_Computing

./: .gitignore  CMakeLists.txt  README.md  TODO.md  build.sh  build_and_run.sh  example.py  implementation_report.md  project-structure.md  project_proposal.md  project_status.md  requirements.txt  run_tui.py  setup.py
benchmark/: CMakeLists.txt  benchmark_all.cpp  benchmark_cpu.cpp  benchmark_gpu.cpp  compare_libraries.cpp  run_benchmarks.py  visualize_results.py
data/results/: library_comparison_results.csv
docs/: usage.md  user_guide.md
examples/: adaptive_optimization.py  baseline_comparison.py  energy_optimization.py  example_model.py  heterogeneous_setup.py  llm_comparison.py  run_comprehensive_comparison.sh
examples/cache/: device_info.json  performance_metrics.json
include/: adaptive.h
include/common/: matrix.h  timing.h  utils.h
include/cpu/: blocked.h  naive.h  simd.h  threaded.h
include/gpu/: cuda_wrapper.h  multi_gpu.h
scripts/: create_folders.sh  optimize_system.py  plot_results.py  roofline_model.py  run_benchmark_and_visualize.sh  run_benchmarks.sh  run_optimal_benchmarks.sh  visualize_benchmarks.py
src/: CMakeLists.txt  adaptive.cpp  api_server.py  main.cpp
src/common/: matrix.cpp  timing.cpp  utils.cpp
src/core/: pipeline.py  scheduler.py  utils.py
src/cpu/: blocked.cpp  multicore.py  naive.cpp  sequential.py  simd.cpp  threaded.cpp  vectorized.py
src/distribution_strategies/: strategy_generator.py
src/gpu/: cuda_wrapper.cpp  cuda_wrapper.cu  cupy_ops.py  custom_kernels.py  matmul_kernel.cu  multi_gpu.cpp  torch_ops.py
src/graph_analysis/: computational_graph.py
src/hardware_profiling/: device_catalog.py  hardware_profiler.py
src/operations/: color_ops.py  features.py  filters.py  transformations.py
src/parallel_opt/: __init__.py  model_optimizer.py
src/runtime/: execution_engine.py  performance_monitor.py
src/utils/: energy_monitor.py
src/visualization/: performance_visualizer.py
test/: CMakeLists.txt  test_correctness.cpp  test_cpu.cpp  test_gpu.cpp
tui/: Cargo.toml
tui/src/: app.rs  communication.rs  main.rs  ui.rs
tui/src/data/: mod.rs
tui/src/widgets/: device_view.rs  energy_view.rs  help_view.rs  mod.rs  performance_view.rs
